--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -22,6 +22,7 @@
     line-height: $button-height;
     text-align: center;
     color: $color-base;
+    background-color: $color-background-base;
     border: 1px solid $color-gray-border;
     border-radius: $button-border-radius;
     font-size: $typographic-base-font-size;
