--- a/src/components/Subscribe/Subscribe.module.scss
+++ b/src/components/Subscribe/Subscribe.module.scss
@@ -11,7 +11,7 @@
 
 .subscribe a {
     color: #fff;
-    font-family: Consolas,Monaco,'Andale Mono','Ubuntu Mono',monospace;
+    font-family: Consolas,Monaco,Andale Mono,Ubuntu Mono,monospace;
     font-size: 1.25em;
     font-weight: bold;
 }
